--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="container--main">
 
             <section id="wrapper--hero" class="section--page">
-                <img id="profile-pic" src="./assets/images/me.JPG">
+                <img id="profile-pic" src="./assets/images/me.jpg">
 
                 <div>
                     <h1 id="user-name">Adrian Lo</h1>
